# OpenGLAssemble

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lyzirving/opengl/assemble/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: anti_alias_line_fragment_shader.glsl  anti_alias_line_vertex_shader.glsl  continuous_line_fragment_shader.glsl  continuous_line_vertex_shader.glsl  curve_fragment_shader.glsl  curve_vertex_shader.glsl  dot_fragment_shader.glsl  dot_vertex_shader.glsl  graphic_fragment_shader.glsl  graphic_vertex_shader.glsl  model_fs.glsl  model_vs.glsl  two_dimen_fragment_shader.glsl  two_dimen_vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  JniLoader.cpp
app/src/main/cpp/common/: Message.cpp  SimpleLooper.cpp
app/src/main/cpp/common/include/: LogUtil.h  Message.h  SimpleLooper.h
app/src/main/cpp/helper/: GlHelper.cpp  MatrixUtil.cpp  ResourceManager.cpp  VectorHelper.cpp
app/src/main/cpp/helper/include/: FileSystem.h  GlHelper.h  ResourceManager.h  VectorHelper.h
app/src/main/cpp/include/common/: LogUtil.h  SimpleLooper.h
app/src/main/cpp/include/renderer/: NativeRendererEnv.h
app/src/main/cpp/line/: CurveRenderer.cpp  DotRenderer.cpp
app/src/main/cpp/model/: Camera.cpp  Mesh.cpp  Model.cpp  Scene3d.cpp
app/src/main/cpp/model/include/: Camera.h  Mesh.h  Model.h  Scene3d.h
app/src/main/cpp/renderer/: AntialiasLineRenderer.cpp  AntialiasRenderer.cpp  AntialiasingLineRenderer.cpp  BaseRendererProgram.cpp  ContinuousLineRenderer.cpp  CurveRenderer.cpp  CurveRendererContext.cpp  EglCore.cpp  GlHelper.cpp  GraphicRenderer.cpp  RendererContext.cpp  Shader.cpp  SimpleLooper.cpp  TwoDimensRenderer.cpp  WindowSurface.cpp  native_RendererContext.cpp
app/src/main/cpp/renderer/include/: AntialiasLineRenderer.h  AntialiasRenderer.h  AntialiasingLineRenderer.h  BaseRendererProgram.h  Constant.h  ContinuousLineRenderer.h  CurveRenderer.h  CurveRendererContext.h  DotRenderer.h  EglCore.h  GlHelper.h  GraphicRenderer.h  MatrixUtil.h  NativeRendererEnv.h  RendererContext.h  RendererMetadata.h  Shader.h  TwoDimensRenderer.h  WindowSurface.h
app/src/main/cpp/third/include/assimp/: config.h
app/src/main/java/com/lyzirving/opengl/assemble/: LineTestView.java  MainActivity.java
app/src/main/java/com/lyzirving/opengl/assemble/gui/: LineTestView.java  Polygon2d.java  Vector2d.java
app/src/main/java/com/lyzirving/opengl/assemble/renderer/: CurveRendererContext.java  RendererConstant.java  RendererContext.java  Scene3d.java
app/src/main/java/com/lyzirving/opengl/assemble/ui/: CurveActivity.java  LineActivity.java  LineTestView.java  MotionView3d.java  SceneActivity.java
app/src/main/java/com/lyzirving/opengl/assemble/utils/: LogUtil.java
app/src/main/res/layout/: activity_curve.xml  activity_line.xml  activity_main.xml  activity_scene.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/lyzirving/opengl/assemble/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
